<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="CONST" Id="{ff7a8fec-59bf-4de1-8605-e586781620f3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AMS_NETID					:STRING:='169.254.227.12.1.1';
	PROJECT_DIR					:STRING:='C:\TwinCAT\243702-Lodige AK\';
	DB_ID						:UDINT:=1;
END_VAR
VAR_GLOBAL PERSISTENT
	Production_Active: ST_Recipe_Production;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>